Queding Edward Final Exam Part2

--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
     <header class="header">
         <h1>This is the Final Exam on WebApp</h1>
     </header>
-    <div class="container">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate deserunt labore eligendi incidunt similique ex doloribus aliquid soluta eos? Incidunt asperiores ea voluptatibus veniam deleniti aliquid quod repellat facilis voluptate.
-        Dignissimos obcaecati assumenda voluptatibus officiis repellat dolorum ad ex error! Nesciunt optio quis qui fugiat amet, molestias odit nulla ea dignissimos nam facere hic assumenda accusamus quas? Eius, architecto praesentium.</p>
-    </div>
-    <div class="item1">
-        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio perspiciatis error, dolorem ipsum voluptates hic repudiandae quia modi veniam impedit ratione voluptas maiores nam obcaecati sunt, ipsa culpa eos.</h1>
-    </div>
-    <div class="item2">
-        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio perspiciatis error, dolorem ipsum voluptates hic repudiandae quia modi veniam impedit ratione voluptas maiores nam obcaecati sunt, ipsa culpa eos.</h1>
-    </div>
-    <div class="item3">
-        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio perspiciatis error, dolorem ipsum voluptates hic repudiandae quia modi veniam impedit ratione voluptas maiores nam obcaecati sunt, ipsa culpa eos.</h1>
-    </div>
+    <body>
+        <div class="container">
+            <div class="item1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quod ducimus at sequi, vero molestiae saepe minus dolorem perspiciatis quae qui voluptatum officia quas assumenda! Quia eos vitae saepe animi!</div>
+            <div class="item2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quidem non earum assumenda illum minus, quia velit itaque exercitationem quo rerum, at vero, voluptates vel officia. Quisquam expedita at mollitia.
+            Accusantium enim ducimus rem facilis, provident vitae non voluptatem ea reiciendis quo, libero ad alias amet fugit explicabo, modi molestiae dolorum laudantium ullam. Nostrum quibusdam sapiente, culpa dolorem nihil eligendi.</div>
+            <div class="item3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae error, facere illo veritatis, libero ipsum fugit aliquam sed pariatur provident nisi molestias sint. Consectetur ipsam eligendi recusandae veniam consequuntur corrupti.
+            Odio, quisquam architecto. Omnis recusandae pariatur hic voluptas nobis nihil voluptatem. Perspiciatis iure sequi quisquam doloremque, culpa et ad voluptas, quod sunt explicabo aliquam accusamus repellat inventore aliquid pariatur quos.
+            Fuga magnam distinctio dolore atque? Fugiat incidunt repudiandae natus quibusdam esse reprehenderit consectetur accusantium impedit similique quas laborum rerum labore illo, eos nulla mollitia totam inventore distinctio, autem id. Quas!</div>
+        </div>
 
 <footer class="footer">
     <h1>Web Application Final Exam 2024</h1>
